--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,3 +1,3 @@
-gothick_phpbb-ext-akismet_controller:
+gothick_akismet_controller:
     path: /akismet/{name}
-    defaults: { _controller: gothick.phpbb-ext-akismet.controller:handle }
+    defaults: { _controller: gothick.akismet.controller:handle }
