Add listener to services.

--- a/config/services.yml
+++ b/config/services.yml
@@ -6,3 +6,10 @@ services:
       - @controller.helper
       - @template
       - @user
+  gothick.akismet.listener:
+    class: gothick\akismet\event\main_listener
+    arguments:
+      - @controller.helper
+      - @template
+    tags:
+      - { name: event.listener }
