--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ Temporary Items
 
 # Composer
 vendor/
+
+# API Key (temporarily hardcoded, but in a separate file
+# so I don't check it in to GitHub accidentally :D 
+event/api_key.php
+
