Added enough code for us to get a test message successfully detected as spam. First time this extension has successfully submitted something to Akismet! Woo! :D

--- a/config/services.yml
+++ b/config/services.yml
@@ -11,5 +11,7 @@ services:
     arguments:
       - @controller.helper
       - @template
+      - @user
+      - @request
     tags:
       - { name: event.listener }
