Add basic option for a nominated user to receive emails/be responsible for log entries, and log as/send emails to that user.

--- a/config/services.yml
+++ b/config/services.yml
@@ -14,5 +14,7 @@ services:
       - @user
       - @request
       - @config
+      - @log
+      - @user_loader
     tags:
       - { name: event.listener }
