Fix admin interface: remove URL configuration (because we know what our URL is!), add all language strings, make module migration consistent with new names.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
       "tijsverkoyen/akismet": "dev-master"
    },
    "extra": {
-      "display-name": "Akismet Anti-Spam Extension",
+      "display-name": "Gothick Akismet Anti-Spam Extension",
       "soft-require" : {
          "phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
       }
