Remove makegood_preload from gitignore now I've realised that it's only causing an EPV warning, not the error I'm trying to track down.

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,4 @@ vendor/
 event/api_key.php
 
 # MG makegood configuration file that the EPV moans about.
-makegood_preload.php
+#makegood_preload.php
