--- a/config/services.yml
+++ b/config/services.yml
@@ -25,3 +25,39 @@ services:
         class: TijsVerkoyen\Akismet\Akismet
         factory_service: gothick.akismet.tijsverkoyen.akismet.factory
         factory_method: createAkismet
+
+    gothick.akismet.notification.type.post_in_queue:
+        class: gothick\akismet\notification\type\post_in_queue
+        scope: prototype
+        arguments:
+            - @user_loader
+            - @dbal.conn
+            - @cache.driver
+            - @user
+            - @auth
+            - @config
+            - %core.root_path%
+            - %core.php_ext%
+            - %tables.notification_types%
+            - %tables.notifications%
+            - %tables.user_notifications%
+        tags:
+            - { name: notification.type }
+
+    gothick.akismet.notification.type.topic_in_queue:
+        class: gothick\akismet\notification\type\topic_in_queue
+        scope: prototype
+        arguments:
+            - @user_loader
+            - @dbal.conn
+            - @cache.driver
+            - @user
+            - @auth
+            - @config
+            - %core.root_path%
+            - %core.php_ext%
+            - %tables.notification_types%
+            - %tables.notifications%
+            - %tables.user_notifications%
+        tags:
+            - { name: notification.type }
