Refactor admin page code into separate admin controller.

--- a/config/services.yml
+++ b/config/services.yml
@@ -14,6 +14,15 @@ services:
         tags:
             - { name: event.listener }
 
+    gothick.akismet.admin.controller:
+        class: gothick\akismet\controller\admin_controller
+        arguments:
+            - @request
+            - @template
+            - @user
+            - @log
+            - @config
+
     gothick.akismet.tijsverkoyen.akismet.factory:
         class: gothick\akismet\utility\akismet_factory
         arguments:
