Language changes for 3.2.x.

--- a/config/services.yml
+++ b/config/services.yml
@@ -22,6 +22,7 @@ services:
             - @user
             - @log
             - @config
+            - @language
 
     gothick.akismet.tijsverkoyen.akismet.factory:
         class: gothick\akismet\utility\akismet_factory
