--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
    "type": "phpbb-extension",
    "description": "Akismet Anti-Spam Extension for PHPBB",
    "homepage": "https://github.com/gothick/phpbb-ext-akismet",
-   "version": "0.1.4",
+   "version": "0.2.0",
    "time": "2015-01-16",
    "license": "GPL-2.0",
    "authors": [{
@@ -23,7 +23,7 @@
    "extra": {
       "display-name": "Akismet Anti-Spam Extension",
       "soft-require" : {
-         "phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
+         "phpbb/phpbb": "~3.2"
       }
    }
 }
