--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,30 @@ sudo: required
 
 matrix:
   include:
-    - php: 5.3
-      env: DB=mysqli # MyISAM
-    - php: 5.4
-      env: DB=mysqli
-    - php: 5.4
-      env: DB=mysql
-    - php: 5.4
-      env: DB=mariadb
-    - php: 5.4
-      env: DB=postgres
-    - php: 5.4
-      env: DB=sqlite3
+#    - php: 5.3
+#      env: DB=mysqli # MyISAM
+#    - php: 5.4
+#      env: DB=mysqli
+#    - php: 5.4
+#      env: DB=mysql
+#    - php: 5.4
+#      env: DB=mariadb
+#    - php: 5.4
+#      env: DB=postgres
+#    - php: 5.4
+#      env: DB=sqlite3
     - php: 5.5
+      env: DB=mysqli
+    - php: 5.5.9
       env: DB=mysqli
     - php: 5.6
       env: DB=mysqli
+    - php: 5.6
+      env: DB=mariadb
+    - php: 5.6
+      env: DB=postgres
+    - php: 5.6
+      env: DB=sqlite3
     - php: hhvm
       env: DB=mysqli
   allow_failures:
@@ -52,4 +60,4 @@ script:
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION; fi"
   - phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php
-  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.3.3' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTNAME/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
+  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.5.9' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTNAME/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
