--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,10 @@ matrix:
       env: DB=postgres
     - php: 5.6
       env: DB=sqlite3
+    - php: 7.0
+      env: DB=mysqli
+    - php: 7.1
+      env: DB=mysqli
     - php: hhvm
       env: DB=mysqli
   allow_failures:
