--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,6 @@ sudo: required
 
 matrix:
   include:
-#    - php: 5.3
-#      env: DB=mysqli # MyISAM
-#    - php: 5.4
-#      env: DB=mysqli
-#    - php: 5.4
-#      env: DB=mysql
-#    - php: 5.4
-#      env: DB=mariadb
-#    - php: 5.4
-#      env: DB=postgres
-#    - php: 5.4
-#      env: DB=sqlite3
     - php: 5.5
       env: DB=mysqli
     - php: 5.5.9
@@ -49,13 +37,14 @@ env:
 branches:
   only:
     - master
-    - /^(3.[1-9]|[4-9].\d).x$/
+    - /^\d+(\.\d+)?\.x$/
+
 install:
-  - composer install --dev --no-interaction --prefer-source
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
   - cd ../../phpBB3
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
   - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION
+  - sh -c "if [ '$EPV' != '0' -a '$TRAVIS_PHP_VERSION' = '5.5' -a '$DB' = 'mysqli' ]; then cd phpBB; composer require phpbb/epv:dev-master --dev --no-interaction; cd ../; fi"
 
 before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION
@@ -64,4 +53,4 @@ script:
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME; fi"
   - sh -c "if [ '$IMAGE_ICC' != '0' ]; then travis/check-image-icc-profiles.sh $DB $TRAVIS_PHP_VERSION; fi"
   - phpBB/vendor/bin/phpunit --configuration phpBB/ext/$EXTNAME/travis/phpunit-$DB-travis.xml --bootstrap ./tests/bootstrap.php
-  - sh -c "if [ '$EPV' != '0' ] && [ '$TRAVIS_PHP_VERSION' = '5.5.9' ] && [ '$DB' = 'mysqli' ]; then phpBB/ext/$EXTNAME/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
+  - sh -c "if [ '$EPV' != '0' -a '$TRAVIS_PHP_VERSION' = '5.5' -a '$DB' = 'mysqli' ]; then phpBB/vendor/bin/EPV.php run --dir='phpBB/ext/$EXTNAME/'; fi"
