--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
       env: DB=postgres
     - php: 5.6
       env: DB=sqlite3
-    - php: 7.0
+    - php: 7.0.8 # Trying to force a higher version than the default of 7.0.7, which seems to be incompatible with Symfony
       env: DB=mysqli
     - php: 7.1
       env: DB=mysqli
