One last desperate attempt to get EPV working on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,8 @@ install:
   - cd ../../phpBB3
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
   - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION
-  - sh -c "if [ '$EPV' != '0' -a '$TRAVIS_PHP_VERSION' = '5.6' -a '$DB' = 'mysqli' ]; then cd phpBB; composer require phpbb/epv:dev-master --dev --no-interaction; cd ../; fi"
+# Idea nicked from https://github.com/AlfredoRamos/phpbb-ext-imgur. Looks like the EPV clashes with sami/sami requirements, so remove it first.
+  - sh -c "if [ '$EPV' != '0' -a '$TRAVIS_PHP_VERSION' = '5.6' -a '$DB' = 'mysqli' ]; then cd phpBB; composer remove sami/sami --update-with-dependencies --dev --no-interaction; composer require phpbb/epv:dev-master --dev --no-interaction --ignore-platform-reqs; cd ../; fi"
 
 before_script:
   - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION
