--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: php
-
-dist: precise
-
+dist: trusty
 sudo: required
 
 matrix:
@@ -9,12 +7,16 @@ matrix:
     - php: 5.6
       env: DB=mysqli
     - php: 5.6
+      # phpBB's MariaDB stuff only seems to be set up for Travis's deprecated Precise
+      # environment. I'm okay with that, especially as I can't think of anything I
+      # could do to make things not work on MariaDB when they work on MySQL...
+      dist: precise    
       env: DB=mariadb
     - php: 5.6
       env: DB=postgres
     - php: 5.6
       env: DB=sqlite3
-    - php: 7.0.8 # Trying to force a higher version than the default of 7.0.7, which seems to be incompatible with Symfony
+    - php: 7.0
       env: DB=mysqli
     - php: 7.1
       env: DB=mysqli
