--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -34,4 +34,10 @@
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <!--<log type="coverage-html" target="/tmp/report" lowUpperBound="35" highLowerBound="70"/>-->
+        <!--<log type="coverage-clover" target="/tmp/coverage-clover.xml"/>-->
+        <!--<log type="testdox-html" target="/tmp/testdox.html"/>-->
+    </logging>
+    
 </phpunit>
