--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ event/api_key.php
 # MG makegood configuration file that the EPV moans about.
 #makegood_preload.php
 *~
+
+# Test coverage report output
+/coverage
