Use dependency injection in admin_controller to allow good unit testing

--- a/config/services.yml
+++ b/config/services.yml
@@ -23,6 +23,8 @@ services:
             - '@log'
             - '@config'
             - '@language'
+            - '@group_helper'
+            - '@dbal.conn'
             - '%core.php_ext%'
             - '%core.root_path%'
 
