--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
       }
    ],
    "require": {
-      "php": ">=5.6",
+      "php": "^7.1.3",
       "composer/installers": "~1.0",
       "gothick/php-akismet": "dev-master"
    },
@@ -28,7 +28,7 @@
    "extra": {
       "display-name": "Akismet Anti-Spam Extension",
       "soft-require" : {
-         "phpbb/phpbb": "~3.2"
+        "phpbb/phpbb": "~3.3"
       }
    }
 }
